# gin_target_localization

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: README.md  aero_target.cfg  aero_target.data  aero_target_frozen_tiny_train.cfg  aero_target_single_layer.cfg  box_sizes.json  default_camera_info_params.json
data/: aero_target.names
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
kubernetes/: README.md  deployment.yaml
launch/: README.md  target_detection.launch  target_detection_rosbag.launch
scr/: README.md
src/: target-distance-depth.py  target-loc.py
visualization/: README.md  gin_target_detection.json
weights/: README.md
